# web-eid-app

./: CMakeLists.txt  build.bat  build.ps1  build.sh  logging.reg  vcpkg.json
install/: macos-native-preinstall.in  plugins.wxs  web-eid.wxs
lib/mac/: libeToken.dylib
src/app/: CMakeLists.txt  MacOSXBundleInfo.plist.in  main.cpp  web-eid.entitlements  web-eid.rc
src/controller/: application.cpp  commands.hpp  controller.cpp
src/controller/command-handlers/: sign.cpp  sign.hpp  signauthutils.hpp
src/controller/threads/: waitforcardthread.hpp
src/mac/: Info-app.plist.cmake
src/ui/: CMakeLists.txt  webeiddialog.cpp
src/ui/translations/: en.ts  tr.ts  translations.qrc
